# bluecodig_challenge

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  settings.py
docker/: docker.env  entrypoint.sh
project/: app.py  crud.py  deps.py  exceptions.py  schemas.py  scrapper.py
project/models/: __init__.py  database.py  uri.py
project/models/alembic/: env.py
project/models/alembic/versions/: 12d06d7dd6d1_adding_table.py  97da1d7154f4_creating_title_field.py  ef22a60c590b_adding_table.py
tests/integration/: healthcheck_test.py  uri_test.py
