[tool.poetry]
name = "tech-interview"
version = "0.1.0"
description = ""
authors = ["Ider Delzo <soloidx@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
typer = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.11"
alembic = "^1.10.4"
beautifulsoup4 = "^4.12.2"
psycopg-binary = "^3.1.8"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
httpx = "^0.24.0"
sqlalchemy-stubs = "^0.4"
types-beautifulsoup4 = "^4.12.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
